// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline empty with single root transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:js:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;

exports[`Pipeline with custom ptransform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:js:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_test_2",
            "ref_AppliedPTransform_custom transform_5",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform/nested subtransform 1_7",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_6",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:js:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform/nested subtransform 1",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_5",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_8",
            ],
          ],
          "spec": Object {
            "payload": "function (pcoll) {
                return pcoll.apply({ transform: new index_1.ParDo(new index_1.DoFn()), label: \\"nested subtransform 1\\" });
                // .apply({ transform: new ParDo(new DoFn()), label: \\"nested subtransform 2\\"});
            }",
            "urn": "beam:transform:js:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform/nested subtransform 1_7",
          ],
          "uniqueName": "custom transform",
        },
      ],
      Array [
        "ref_AppliedPTransform_test_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_4",
            ],
          ],
          "spec": Object {
            "payload": "beam:dofn:js:v1,,function () {
        throw new Error('Needs to be implemented in subclasses');
    }",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "test",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;

exports[`Pipeline with multiple subtransforms 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:js:v1",
          },
          "subtransformsList": Array [
            "ref_ParDo_A_2",
            "ref_ParDo_B-1_5",
            "ref_ParDo_C-1_7",
            "ref_ParDo_B-2_9",
            "ref_ParDo_C-2_11",
          ],
          "uniqueName": "",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;

exports[`Pipeline with one transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:js:v1",
          },
          "subtransformsList": Array [
            "ref_ParDo_custom label_2",
          ],
          "uniqueName": "",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "",
  ],
}
`;
